--- a/ApplicationBDO/ApplicationBDO.csproj
+++ b/ApplicationBDO/ApplicationBDO.csproj
@@ -176,6 +176,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\RegistransController.cs" />
+    <Compile Include="Controllers\TransmittingController.cs" />
+    <Compile Include="Controllers\TransportController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -191,10 +194,21 @@
     <Compile Include="Migrations\202002131802051_ChangeNameTable.Designer.cs">
       <DependentUpon>202002131802051_ChangeNameTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002131900166_Update1.cs" />
+    <Compile Include="Migrations\202002131900166_Update1.Designer.cs">
+      <DependentUpon>202002131900166_Update1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002132009028_DodanietModels.cs" />
+    <Compile Include="Migrations\202002132009028_DodanietModels.Designer.cs">
+      <DependentUpon>202002132009028_DodanietModels.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\RegistransModels.cs" />
+    <Compile Include="Models\TransmittingModels.cs" />
+    <Compile Include="Models\TransportModels.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -259,6 +273,22 @@
     <Content Include="Views\Shared\_Scripts.cshtml" />
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\_TopRight.cshtml" />
+    <Content Include="Views\Shared\_Ribbon.cshtml" />
+    <Content Include="Views\Registrans\Create.cshtml" />
+    <Content Include="Views\Registrans\Delete.cshtml" />
+    <Content Include="Views\Registrans\Details.cshtml" />
+    <Content Include="Views\Registrans\Edit.cshtml" />
+    <Content Include="Views\Registrans\Index.cshtml" />
+    <Content Include="Views\Transport\Create.cshtml" />
+    <Content Include="Views\Transport\Delete.cshtml" />
+    <Content Include="Views\Transport\Details.cshtml" />
+    <Content Include="Views\Transport\Edit.cshtml" />
+    <Content Include="Views\Transport\Index.cshtml" />
+    <Content Include="Views\Transmitting\Details.cshtml" />
+    <Content Include="Views\Transmitting\Edit.cshtml" />
+    <Content Include="Views\Transmitting\Index.cshtml" />
+    <Content Include="Views\Transmitting\Create.cshtml" />
+    <Content Include="Views\Transmitting\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -285,6 +315,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002131802051_ChangeNameTable.resx">
       <DependentUpon>202002131802051_ChangeNameTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002131900166_Update1.resx">
+      <DependentUpon>202002131900166_Update1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002132009028_DodanietModels.resx">
+      <DependentUpon>202002132009028_DodanietModels.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
