--- a/ApplicationBDO/ApplicationBDO.csproj
+++ b/ApplicationBDO/ApplicationBDO.csproj
@@ -206,13 +206,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CompanyController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\CompanyLoadController.cs" />
+    <Compile Include="Controllers\CompanyNoSQLController.cs" />
+    <Compile Include="Controllers\CompanySQLController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\RegistransController.cs" />
-    <Compile Include="Controllers\TransmittingController.cs" />
-    <Compile Include="Controllers\TransportController.cs" />
-    <Compile Include="Controllers\WasteCodeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -236,15 +233,15 @@
     <Compile Include="Migrations\202101241405400_ChaneApi.Designer.cs">
       <DependentUpon>202101241405400_ChaneApi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102111222078_ZMianaModeluLog.cs" />
+    <Compile Include="Migrations\202102111222078_ZMianaModeluLog.Designer.cs">
+      <DependentUpon>202102111222078_ZMianaModeluLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CompanyModels.cs" />
     <Compile Include="Models\LogModels.cs" />
-    <Compile Include="Models\RegistransModels.cs" />
     <Compile Include="Models\CompanyMongoModels.cs" />
     <Compile Include="Models\TransmittingMongoModels.cs" />
-    <Compile Include="Models\TransmittingModels.cs" />
-    <Compile Include="Models\TransportModels.cs" />
-    <Compile Include="Models\WasteCodeModels.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
@@ -1012,32 +1009,8 @@
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\_TopRight.cshtml" />
     <Content Include="Views\Shared\_Ribbon.cshtml" />
-    <Content Include="Views\Registrans\Create.cshtml" />
-    <Content Include="Views\Registrans\Delete.cshtml" />
-    <Content Include="Views\Registrans\Details.cshtml" />
-    <Content Include="Views\Registrans\Edit.cshtml" />
-    <Content Include="Views\Registrans\Index.cshtml" />
-    <Content Include="Views\Transport\Create.cshtml" />
-    <Content Include="Views\Transport\Delete.cshtml" />
-    <Content Include="Views\Transport\Details.cshtml" />
-    <Content Include="Views\Transport\Edit.cshtml" />
-    <Content Include="Views\Transport\Index.cshtml" />
-    <Content Include="Views\Transmitting\Details.cshtml" />
-    <Content Include="Views\Transmitting\Edit.cshtml" />
-    <Content Include="Views\Transmitting\Index.cshtml" />
-    <Content Include="Views\Transmitting\Create.cshtml" />
-    <Content Include="Views\Transmitting\Delete.cshtml" />
-    <Content Include="Views\WasteCode\Create.cshtml" />
-    <Content Include="Views\WasteCode\Delete.cshtml" />
-    <Content Include="Views\WasteCode\Details.cshtml" />
-    <Content Include="Views\WasteCode\Edit.cshtml" />
-    <Content Include="Views\WasteCode\Index.cshtml" />
-    <Content Include="Views\Company\Create.cshtml" />
-    <Content Include="Views\Company\Delete.cshtml" />
-    <Content Include="Views\Company\Details.cshtml" />
-    <Content Include="Views\Company\Edit.cshtml" />
-    <Content Include="Views\Company\IndexLoadFileToSQL.cshtml" />
-    <Content Include="Views\Company\IndexLoadFileToNoSQL.cshtml" />
+    <Content Include="Views\CompanySQL\IndexFileToSQL.cshtml" />
+    <Content Include="Views\CompanyNoSQL\IndexFileToNoSQL.cshtml" />
     <Content Include="Scripts\libs\jquery-2.1.1.min.map" />
     <Content Include="Scripts\plugin\bootstrap-tags\dist\bootstrap-tagsinput.min.js.map" />
     <Content Include="Scripts\plugin\ckeditor\CHANGES.md" />
@@ -1059,7 +1032,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="packages.config" />
-    <Content Include="Views\Company\IndexLoadApiToFile.cshtml" />
+    <Content Include="Views\CompanyLoad\IndexLoadApiToFile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IO.Swagger\IO.Swagger.csproj">
@@ -1082,6 +1055,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101241405400_ChaneApi.resx">
       <DependentUpon>202101241405400_ChaneApi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102111222078_ZMianaModeluLog.resx">
+      <DependentUpon>202102111222078_ZMianaModeluLog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
