--- a/ApplicationBDO/ApplicationBDO.csproj
+++ b/ApplicationBDO/ApplicationBDO.csproj
@@ -54,6 +54,9 @@
     <Reference Include="Lambda2Js.Signed, Version=3.1.3.0, Culture=neutral, PublicKeyToken=9ba16f7edfc48fe6, processorArchitecture=MSIL">
       <HintPath>..\packages\Lambda2Js.Signed.3.1.3\lib\net40\Lambda2Js.Signed.dll</HintPath>
     </Reference>
+    <Reference Include="LiteDB, Version=5.0.10.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiteDB.5.0.10\lib\net45\LiteDB.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -265,6 +268,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CompanyLoadController.cs" />
     <Compile Include="Controllers\CompanyNoSQLRavenDBController.cs" />
+    <Compile Include="Controllers\CompanyNoSQLLiteDBController.cs" />
     <Compile Include="Controllers\CompanyNoSQLMongoDBController.cs" />
     <Compile Include="Controllers\CompanySQLMSSQLExpressController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -1099,6 +1103,7 @@
     <None Include="packages.config" />
     <Content Include="Views\CompanyLoad\Index.cshtml" />
     <Content Include="Views\CompanyNoSQLRavenDB\Index.cshtml" />
+    <Content Include="Views\CompanyNoSQLLiteDB\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IO.Swagger\IO.Swagger.csproj">
