--- a/ApplicationBDO/packages.config
+++ b/ApplicationBDO/packages.config
@@ -8,6 +8,7 @@
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Lambda2Js.Signed" version="3.1.3" targetFramework="net472" />
+  <package id="LiteDB" version="5.0.10" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net472" />
