--- a/ApplicationBDO/packages.config
+++ b/ApplicationBDO/packages.config
@@ -50,7 +50,12 @@
   <package id="SharpCompress" version="0.23.0" targetFramework="net472" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.0" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.113.7" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
