--- a/ApplicationBDO/packages.config
+++ b/ApplicationBDO/packages.config
@@ -43,6 +43,7 @@
   <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net472" />
   <package id="MySql.Data.EntityFramework" version="8.0.11" targetFramework="net472" />
+  <package id="MySqlConnector" version="1.2.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RavenDB.Client" version="5.1.4" targetFramework="net472" />
